[project]
name = "OpenMM"
description = "Python wrapper for OpenMM (a C++ MD package)"
authors = [{ name = "Peter Eastman", email = "peastman@stanford.edu" }]
readme = "README.md"
license = "PSF-2.0"
requires-python = ">=3.8"
dynamic = ["version"]
classifiers = [
  "Programming Language :: Python :: 3",
]
dependencies = [
  "numpy"
]

[project.urls]
"Homepage" = "https://openmm.org"
"Bug Tracker" = "https://github.com/openmm/openmm/issues"
"Download URL" = "https://openmm.org"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
include = ["openmm*"]


[tool.setuptools.exclude-package-data]
"*" = ["*.c", "*.cpp", "*.h", "*.cuh", "*.cu", ".gitignore"]

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8", "numpy", "cython"]
build-backend = "setuptools.build_meta"


[tool.cibuildwheel]
skip = ["cp38-*", "pp*", "*win32", "*armv7l", "*_i686", "*_ppc64le", "*_s390x", "*_universal2", "*-musllinux_*"]
test-requires = ["pytest"]
test-command = "pytest {project}/tests"
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
environment-pass = ["CIBW_ARCHS"]
# container-engine = "docker; create_args: --gpus all"

# [tool.cibuildwheel.macos]
# repair-wheel-command = [
#   "delocate-wheel --ignore-missing-dependencies --require-archs {delocate_archs} -w {dest_dir} -v {wheel}",
# ]